Add quick reference guide, update package-lock, and implement AIService tests
- Created QUICK_REFERENCE_PROD.md for production URLs, Docker commands, testing instructions, and troubleshooting tips.
- Added package-lock.json to manage dependencies.
- Implemented test-aiservice-direct.js to directly test AIService's processVoiceQuery method.
- Introduced temporary AIService.js file for future modifications.

--- a/package.json
+++ b/package.json
@@ -13,10 +13,20 @@
     "docker:up": "docker-compose up",
     "docker:down": "docker-compose down"
   },
-  "keywords": ["agriculture", "trading", "multilingual", "india", "enam"],
+  "keywords": [
+    "agriculture",
+    "trading",
+    "multilingual",
+    "india",
+    "enam"
+  ],
   "author": "Multilingual Mandi Team",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "axios": "^1.13.3",
+    "dotenv": "^17.2.3"
   }
 }
