docs: Add QUICK_START.md and update version to 4.7

--- a/docker-compose.lokalmandi.yml
+++ b/docker-compose.lokalmandi.yml
@@ -32,7 +32,7 @@ services:
       - ./.env:/app/.env
       - /app/node_modules
       - lokalmandi-backend-data:/app/data
-    command: npm start
+    command: npm run dev
     restart: unless-stopped
     networks:
       root_default:
