--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -23,43 +23,48 @@ FROM nginx:alpine AS production
 # Install nodejs for potential SSR or API proxy needs
 RUN apk add --no-cache nodejs
 
-# Create default nginx configuration
-RUN echo 'server { \
+# Copy custom nginx configuration
+COPY --from=builder /app/nginx.conf /etc/nginx/conf.d/default.conf 2>/dev/null || echo "server { \
     listen 80; \
     server_name _; \
     root /usr/share/nginx/html; \
     index index.html; \
     \
+    # Gzip compression \
     gzip on; \
     gzip_vary on; \
     gzip_min_length 1024; \
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json; \
     \
-    add_header X-Frame-Options "SAMEORIGIN" always; \
-    add_header X-Content-Type-Options "nosniff" always; \
-    add_header X-XSS-Protection "1; mode=block" always; \
+    # Security headers \
+    add_header X-Frame-Options \"SAMEORIGIN\" always; \
+    add_header X-Content-Type-Options \"nosniff\" always; \
+    add_header X-XSS-Protection \"1; mode=block\" always; \
     \
+    # Cache static assets \
     location ~* \\.(?:css|js|jpg|jpeg|gif|png|ico|svg|woff|woff2|ttf|eot)$ { \
         expires 1y; \
-        add_header Cache-Control "public, immutable"; \
+        add_header Cache-Control \"public, immutable\"; \
     } \
     \
+    # SPA routing - serve index.html for all routes \
     location / { \
-        try_files $uri $uri/ /index.html; \
+        try_files \$uri \$uri/ /index.html; \
     } \
     \
+    # API proxy (optional - configure backend URL) \
     location /api { \
         proxy_pass http://backend:5000; \
         proxy_http_version 1.1; \
-        proxy_set_header Upgrade $http_upgrade; \
-        proxy_set_header Connection upgrade; \
-        proxy_set_header Host $host; \
-        proxy_cache_bypass $http_upgrade; \
-        proxy_set_header X-Real-IP $remote_addr; \
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; \
-        proxy_set_header X-Forwarded-Proto $scheme; \
+        proxy_set_header Upgrade \$http_upgrade; \
+        proxy_set_header Connection 'upgrade'; \
+        proxy_set_header Host \$host; \
+        proxy_cache_bypass \$http_upgrade; \
+        proxy_set_header X-Real-IP \$remote_addr; \
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for; \
+        proxy_set_header X-Forwarded-Proto \$scheme; \
     } \
-}' > /etc/nginx/conf.d/default.conf
+}" > /etc/nginx/conf.d/default.conf
 
 # Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
