--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -20,51 +20,11 @@ RUN npm run build
 # Stage 2: Production image with nginx
 FROM nginx:alpine AS production
 
-# Install nodejs for potential SSR or API proxy needs
-RUN apk add --no-cache nodejs
+# Install nodejs and curl for health checks
+RUN apk add --no-cache nodejs curl
 
-# Copy custom nginx configuration
-COPY --from=builder /app/nginx.conf /etc/nginx/conf.d/default.conf 2>/dev/null || echo "server { \
-    listen 80; \
-    server_name _; \
-    root /usr/share/nginx/html; \
-    index index.html; \
-    \
-    # Gzip compression \
-    gzip on; \
-    gzip_vary on; \
-    gzip_min_length 1024; \
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json; \
-    \
-    # Security headers \
-    add_header X-Frame-Options \"SAMEORIGIN\" always; \
-    add_header X-Content-Type-Options \"nosniff\" always; \
-    add_header X-XSS-Protection \"1; mode=block\" always; \
-    \
-    # Cache static assets \
-    location ~* \\.(?:css|js|jpg|jpeg|gif|png|ico|svg|woff|woff2|ttf|eot)$ { \
-        expires 1y; \
-        add_header Cache-Control \"public, immutable\"; \
-    } \
-    \
-    # SPA routing - serve index.html for all routes \
-    location / { \
-        try_files \$uri \$uri/ /index.html; \
-    } \
-    \
-    # API proxy (optional - configure backend URL) \
-    location /api { \
-        proxy_pass http://backend:5000; \
-        proxy_http_version 1.1; \
-        proxy_set_header Upgrade \$http_upgrade; \
-        proxy_set_header Connection 'upgrade'; \
-        proxy_set_header Host \$host; \
-        proxy_cache_bypass \$http_upgrade; \
-        proxy_set_header X-Real-IP \$remote_addr; \
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for; \
-        proxy_set_header X-Forwarded-Proto \$scheme; \
-    } \
-}" > /etc/nginx/conf.d/default.conf
+# Copy nginx configuration
+COPY nginx.default.conf /etc/nginx/conf.d/default.conf
 
 # Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
@@ -72,9 +32,9 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 # Expose port 80
 EXPOSE 80
 
-# Health check
+# Health check using curl instead of wget (more reliable in alpine)
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
-    CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
+    CMD curl -f http://localhost/ || exit 1
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
