--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,22 @@
+# Environment Configuration Template
+# Copy this to .env.production and fill in actual values
+
+# Node Environment
+NODE_ENV=production
+
 # Backend Configuration
-NODE_ENV=development
-PORT=5000
-DATABASE_URL=sqlite:./mandi.db
+BACKEND_PORT=5000
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=7d
+# Frontend Configuration
+FRONTEND_PORT=80
 
-# BHASHINI API Configuration
-BHASHINI_API_KEY=your-bhashini-api-key
-BHASHINI_API_URL=https://api.bhashini.gov.in
-LINGUISTIC_PROVIDER=bhashini
+# AI Service API Keys (Optional - BYOK Support)
+OPENROUTER_API_KEY=your_key_here
+GROQ_API_KEY=your_key_here
+DEEPGRAM_API_KEY=your_key_here
 
-# eNAM API Configuration (Mocked for MVP)
-ENAM_API_KEY=your-enam-api-key
-ENAM_API_URL=https://api.enam.gov.in
+# Database
+DATABASE_URL=sqlite:./backend/data/lokalmandi.db
 
-# SMS/OTP Configuration (Mock for MVP)
-SMS_PROVIDER=mock
-TWILIO_ACCOUNT_SID=your-twilio-sid
-TWILIO_AUTH_TOKEN=your-twilio-token
-TWILIO_PHONE_NUMBER=+1234567890
-
-# Frontend URL
-FRONTEND_URL=http://localhost:3000
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3000
+# Security
+JWT_SECRET=your_secret_here_change_in_production
