--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -14,6 +14,9 @@ RUN npm ci && \
 # Copy application source
 COPY frontend/ .
 
+# Copy config directory for version.js access
+COPY config/ ../config/
+
 # Build the application
 RUN npm run build
 
@@ -24,7 +27,7 @@ FROM nginx:alpine AS production
 RUN apk add --no-cache nodejs curl
 
 # Copy nginx configuration
-COPY nginx.default.conf /etc/nginx/conf.d/default.conf
+COPY config/nginx.default.conf /etc/nginx/conf.d/default.conf
 
 # Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
