--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -43,6 +43,12 @@ services:
     restart: unless-stopped
     
     # --------------------------------------------------------------------------
+    # ENVIRONMENT FILES - Load from config directory
+    # --------------------------------------------------------------------------
+    env_file:
+      - config/.env.production
+    
+    # --------------------------------------------------------------------------
     # NETWORK CONFIGURATION - Static IP for stability
     # --------------------------------------------------------------------------
     networks:
@@ -142,6 +148,12 @@ services:
         - VITE_API_URL=https://api.lehana.in/lokalmandi
     container_name: lokalmandi-frontend
     restart: unless-stopped
+    
+    # --------------------------------------------------------------------------
+    # ENVIRONMENT FILES - Load from config directory
+    # --------------------------------------------------------------------------
+    env_file:
+      - config/.env.production
     
     # --------------------------------------------------------------------------
     # NETWORK CONFIGURATION - Static IP for stability
